# backend/modules/analyze/model/analysis.go
@@ -1,17 +1,38 @@
 package model
 
 type AnalysisItem struct {
+	ID                    int64
+	UserID                int64
+	AnalysisVersion       int64
+	OfferTitle            string
+	OfferDescription      string
+	OfferCategoryID       *int32
+	OfferCategoryIsManual bool
+}
+
+type AnalysisWish struct {
 	ID               int64
-	AnalysisVersion  int64
-	OfferTitle       string
-	OfferDescription string
+	Description      string
+	CategoryID       *int32
+	CategoryIsManual bool
+}
+
+type WishAnalysisResult struct {
+	ID                    int64
+	CategoryID            *int32
+	CategoryIsManual      bool
+	WantEmbeddingLocal    []float32
+	WantEmbeddingExternal []float32
 }
 
 type AnalysisResult struct {
-	ItemID           int64
-	AnalysisVersion  int64
-	OfferCategoryID  int32
-	ParamRichness    float64
-	IsCategoryManual bool
-	OfferEmbedding   []float32
+	ItemID                    int64
+	AnalysisVersion           int64
+	OfferCategoryID           *int32
+	OfferCategoryIsManual     bool
+	ParamRichness             float64
+	OfferEmbeddingLocal       []float32
+	OfferEmbeddingExternal    []float32
+	Wishes                    []WishAnalysisResult
+	RequiresCategoryInput     bool
 }
